--- a/navigationlistview/src/main/res/layout/list_group.xml
+++ b/navigationlistview/src/main/res/layout/list_group.xml
@@ -3,33 +3,30 @@
     android:id="@+id/layout_group"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?selectableItemBackground"
-    android:paddingTop="10dp"
+    android:background="@color/colorPrimary"
+    android:paddingTop="8dp"
     android:paddingEnd="16dp"
-    android:paddingRight="16dp"
-    android:paddingBottom="10dp">
+    android:paddingBottom="8dp">
 
     <ImageView
         android:id="@+id/icon_menu"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:visibility="gone" />
 
-    <TextView
+    <me.myatminsoe.mdetect.MMTextView
         android:id="@+id/lblListHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:text="menu"
-        android:textColor="@android:color/black" />
+        android:textColor="@color/colorAccent"
+        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:text=""
+        android:textStyle="bold"
+        android:textSize="16sp"
+        />
 
     <ImageView
         android:id="@+id/ivGroupIndicator"
@@ -38,18 +35,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:src="@drawable/ic_add"
         android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/is_new"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="10dp"
-        android:gravity="center"
-        android:padding="5dp"
-        android:text="0"
-        android:textSize="8sp" />
+
 
 </RelativeLayout>
