--- a/navigationlistview/src/main/res/layout/list_item.xml
+++ b/navigationlistview/src/main/res/layout/list_item.xml
@@ -4,14 +4,18 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingTop="16dp"
-    android:paddingBottom="16dp">
+    android:paddingBottom="16dp"
+    android:background="@color/colorPrimary">
 
-    <TextView
+    <me.myatminsoe.mdetect.MMTextView
         android:id="@+id/lblListItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft" />
 
 </LinearLayout>
