--- a/navigationlistview/src/main/res/layout/list_group.xml
+++ b/navigationlistview/src/main/res/layout/list_group.xml
@@ -16,7 +16,7 @@
         android:layout_centerVertical="true"
         android:visibility="gone" />
 
-    <me.myatminsoe.mdetect.MMTextView
+    <TextView
         android:id="@+id/lblListHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
